# iracing-endurance-racing-planner

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  _variables.scss  api-entrypoint.sh  appspec.yml  default.conf  docker-compose.yaml  index.html  index.scss  package-lock.json  planner.code-workspace
.github/workflows/: build-and-deploy.yml  pr.yml  rust.yml
api/: Cargo.toml  README.md  local-env.json  sqlx-data.json  template.yml
api/.sqlx/: query-05b12047cb1e088a05bcd0f1696c89a17d3222d9084cb5ed75368d0ab2bedcfe.json  query-2cef93f9fd8ef5881a8fde5a27b48cec3e72c4d0d659717ac48e05acf0e721eb.json  query-3bcdf2b51bd57c45e85f2c604ac41c9c0d2f25b1e4da6be63dc04dc56c9faebe.json  query-4c0851338fee9d9035f5b1fdc5162ec93a769f1663ec06ec3fd6575a1b9338ad.json  query-697f32626f96c4b569c8433a73d094cf3c954ebe77a47567d2df4f557e9bebb0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-88e951ea73c6ee4df55b39786c62ef690d7730c96996609b92c1a8b0c93f5ec9.json  query-9ab1fb2ff65388ce9f4b66a861f00e3af8280dcb088fe5b63322be8156fac400.json  query-a5d3694f9efcc4edf29131c19a6ff78bc318198449572e8c381fb74639c6c1f8.json  query-aa2c62611c1fa2d968b7b49ab46573acf69c1961ac9d89fcbc410977c9711549.json  query-b7e72f6acfd49005d876a41d0aca01d941e742707eeeb47e5bd86a225d86d084.json  query-b85ce5addafbcecd1bf898473698d45839b35fa3ba0c244dc726f55e8fc34700.json  query-c4607bb7d2ec61d1c167ba55655a59fd6a94a2afbf9627e0483a52a696dc6799.json  query-c57d8c84e49dfff495ef1115bdb8814a1e10e7bab1a1e82433b2e04bbb794794.json  query-d81ea4c080e893422e2b248b999d010d3e2c91d9cb65da453687cd1e9c7e7cb8.json  query-e288be07b3513121cbc57a3d47369df16cce19f7449a6539a58618412e9cb674.json  query-ffab7c35fe782a0fe437f365ed0aef50640b33fbdf3543077bee937417223665.json
api/add-plan/: Cargo.toml  body.json
api/add-plan/src/: main.rs
api/add-user/: Cargo.toml
api/add-user/src/: main.rs
api/get-plan/: Cargo.toml
api/get-plan/src/: main.rs
api/get-user/: Cargo.toml
api/get-user/src/: main.rs
api/me/: Cargo.toml
api/me/src/: main.rs
api/migrations/: 20230123173814_initial.up.sql  20230123174029_add_plan.down.sql  20230123174029_add_plan.up.sql  20230123180405_add_modified_to_plan.up.sql  20230123181030_add_user_plans.up.sql  20230123181805_add_event_configs.down.sql  20230123181805_add_event_configs.up.sql  20230123182348_add_fuel_stint_average_times.down.sql  20230123182348_add_fuel_stint_average_times.up.sql  20230123183000_add_columns_to_event_config.down.sql  20230123183000_add_columns_to_event_config.up.sql  20230123183827_add_schedule_stints.down.sql  20230123183827_add_schedule_stints.up.sql  20230123190028_add_driver_relationship_to_stint.up.sql  20230123191720_fuel_stint_configs.down.sql  20230123191720_fuel_stint_configs.up.sql
api/src/: drivers.rs  lib.rs  main.rs  plans.rs  schedules.rs  users.rs
api/src/data_access/: plans.rs  user.rs
api/src/data_access/entities/: driver.rs  plan.rs  schedule.rs
api/utilities/: Cargo.toml
api/utilities/src/: lib.rs
axum-api/: Cargo.toml
axum-api/migrations/: 20230123173814_initial.up.sql  20230123180405_add_modified_to_plan.down.sql  20230123181030_add_user_plans.down.sql  20230123185620_drivers.up.sql  20230123190028_add_driver_relationship_to_stint.down.sql
axum-api/src/: add_plan.rs  add_plan_driver.rs  add_schedule.rs  drivers.rs  get_plan_drivers.rs  main.rs  patch_plan.rs  plans.rs  schedules.rs  users.rs
axum-api/src/data_access/: drivers.rs  mod.rs  plans.rs  schedules.rs
axum-api/src/data_access/entities/: driver.rs  schedule.rs
common/: Cargo.toml
common/src/: duration_serde.rs  google_open_id_claims.rs  lib.rs  option_duration_serde.rs  schedule.rs  user.rs  uuid_gen.rs
data-access/: .env  Cargo.toml
data-access/src/: drivers.rs  lib.rs  plans.rs  schedules.rs  user.rs
data-access/src/entities/: driver.rs  mod.rs  plan.rs  schedule.rs
db/: Cargo.toml  README.md
db/src/: main.rs  types.rs
db/src/migrations/: V10__update_user_plans.rs  V11__add_driver_roster.rs  V12__add_driver_relationship_to_stint.rs  V13__update_driver_with_lap_time.rs  V1__initial.rs  V2__add_plan.rs  V3__add_modified_to_plan.rs  V4__add_user_plans.rs  V5__add_event_configs.rs  V6__add_fuel_stint_config.rs  V7__add_fuel_stint_average_times.rs  V8__add_columns_to_event_config.rs  V9__add_schedule_stinits.rs  mod.rs
deploy-scripts/: clear-web-directory.sh  restart-api.sh  unlink-api-executable.sh
js/: index.js
src/: bindings.rs  event_bus.rs  fuel_stint_times.rs  lib.rs  main.rs  md-enable-functions.js  md_text_field.rs  overall_fuel_stint_config.rs  roster.rs
src/overview/: fuel_stint_times.rs  mod.rs  overall_event_config.rs  per_driver_lap_factors.rs  time_of_day_lap_factors.rs
src/schedule/: _schedule.scss  fuel_stint_schedule.rs
static/: index.html
web/: .env.sample  Cargo.toml  Dockerfile.build  _variables.scss  index.scss  package-lock.json  package.json  webpack.config.js
web/js/: index.js
web/src/: _header.scss  _share_plan.scss  auth.rs  duration_serde.rs  event_bus.rs  lib.rs  md-enable-functions.js  md_text_field.rs  planner.rs  roster.rs  share_plan.rs
web/src/http/: drivers.rs  mod.rs  plans.rs  schedules.rs
web/src/landing/: _landing.scss  mod.rs
web/src/loading/: _loading.scss  mod.rs
web/src/overview/: fuel_stint_times.rs  mod.rs  overall_event_config.rs  overall_fuel_stint_config.rs  per_driver_lap_factors.rs  time_of_day_lap_factors.rs
web/src/schedule/: _schedule.scss  fuel_stint_schedule.rs  mod.rs
web/static/: index.html
web/static/fonts/material-icons/: material-icons.css
web/static/fonts/roboto/: roboto.css
