[package]
name = "endurance-racing-planner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde", "wasmbind"]

[dependencies.wasm-bindgen]
version = "0.2.78"

[dependencies.boolinator]
version = "2.4.0"