[package]
name = "endurance-racing-planner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yew]
version = "0.18.0"

[dependencies.yew-router]
version = "0.15.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde", "wasmbind"]

[dependencies.wasm-bindgen]
version = "0.2.78"

[dependencies.boolinator]
version = "2.4.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.regex]
version = "1.5.4"

[dependencies.once_cell]
version = "1.8.0"