[[bin]]
name = 'add-plan'
path = 'src/bin/add_plan.rs'
test = false

[[bin]]
name = 'add-user'
path = 'src/bin/add_user.rs'
test = false

[[bin]]
name = 'get-plan'
path = 'src/bin/get_plan.rs'
test = false

[[bin]]
name = 'get-plans'
path = 'src/bin/get_plans.rs'
test = false

[[bin]]
name = 'get-user'
path = 'src/bin/get_user.rs'
test = false

[[bin]]
name = 'me'
path = 'src/bin/me.rs'
test = false

[[bin]]
name = 'patch-plan'
path = 'src/bin/patch_plan.rs'
test = false

[[bin]]
name = 'add-schedule'
path = 'src/bin/add_schedule.rs'
test = false

[[bin]]
name = 'get-schedule'
path = 'src/bin/get_schedule.rs'
test = false

[[bin]]
name = 'put-schedule'
path = 'src/bin/put_schedule.rs'
test = false

[package]
name = 'api'
version = '0.1.0'
edition = '2021'

[dependencies]
lambda_http = '0.5.2'
serde_json = '1.0.79'

[dependencies.axum]
version = '0.5.12'
features = ['headers']

[dependencies.axum-aws-lambda]
version = '0.2.0'

[dependencies.chrono]
version = '0.4.19'

[dependencies.env_logger]
version = '0.9.0'

[dependencies.jwt-compact]
version = '0.5.0'
default-features = false
features = [
    'clock',
    'with_rsa',
]

[dependencies.tokio]
version = '1.17.0'
features = ['full']

[dependencies.tower-http]
version = '0.3.4'
features = ['cors']

[dependencies.serde]
version = '1.0.136'

[dependencies.sqlx]
version = '0.6.1'
features = [
    'postgres',
    'runtime-tokio-rustls',
]

[dependencies.endurance_racing_planner_common]
path = '../common'

[dependencies.data_access]
path = '../data-access'
