[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.2", features = ["headers"] }
axum-macros = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.2.2"
endurance_racing_planner_common = { version = "0.1.0", path = "../common" }
dotenvy = "0.15.6"

[dependencies.chrono]
version = "0.4.31"

[dependencies.jwt-compact]
version = "0.8.0"
default-features = false
features = ['clock', 'rsa']

[dependencies.tower-http]
version = "0.3.4"
features = ['cors']

[dependencies.sqlx]
version = "0.8.6"
features = ["postgres", "runtime-tokio", "uuid", "chrono", "tls-rustls"]

[dependencies.reqwest]
version = "0.11.9"
features = ["json"]

[dependencies.reqwest-middleware]
version = "0.2.0"

[dependencies.http-cache-reqwest]
version = "0.5.2"
features = ["manager-moka"]
