[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.5.11"
features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"]

[dependencies.endurance_racing_planner_common]
path = "../common"
