[package]
name = 'data_access'
version = '0.1.0'
edition = '2021'

[dependencies]
futures = '0.3'

[dependencies.sqlx]
version = '0.5.11'
features = [
    'runtime-tokio-rustls',
    'postgres',
    'uuid',
    'chrono',
]

[dependencies.endurance_racing_planner_common]
path = '../common'

[dependencies.chrono]
version = '0.4.19'

[dependencies.uuid]
version = '0.8.2'
features = ['v4']
