[package]
name = "endurance-racing-planner"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yew]
version = "0.18.0"

[dependencies.yew-router]
version = "0.15.0"

[dependencies.yewtil]
version = "0.4.0"

[dependencies.yew-mdc]
git = "https://github.com/lukepfeiffer10/yew-mdc.git"

[dependencies.chrono]
version = "0.4.19"
features = ["serde", "wasmbind"]

[dependencies.wasm-bindgen]
version = "0.2.78"

[dependencies.boolinator]
version = "2.4.0"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.regex]
version = "1.5.4"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.oauth2]
version = "4.1.0"
features = ["reqwest"]

[dependencies.serde_json]
version = "1.0.73"

[dependencies.wasm-bindgen-futures]
version = "0.4.28"

[dependencies.js-sys]
version = "0.3.55"

[dependencies.jwt-compact]
version = "0.5.0"
default-features = false
features = ["clock", "with_rsa" ]

[dependencies.reqwest]
version = "0.11.9"
features = [ "json" ]