[package]
name = "get-plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#aws-config = "0.7.0"
#aws-sdk-dynamodb = "0.7.0"
lambda_http = "0.5.1"
#serde = "1.0.136"
serde_json = "1.0.79"
#serde_derive = "1.0.136"
#log = "0.4.14"
#simple_logger = "2.1.0"
#
[dependencies.uuid]
version = "^0.8"
features = ["v4"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.endurance_racing_planner_common]
path = "../../common"

[package.metadata.lambda.env]
IS_LOCAL = true
