[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.5.1"
serde_json = "1.0.79"

[dependencies.serde]
version = "1.0.136"

[dependencies.endurance_racing_planner_common]
path = "../../common"